# Optimization-Methods

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: gradle.yml
.run/: TestOptimizer.run.xml
Lab1-2/: settings.gradle
Lab1-2/src/main/java/firstLab/: Brent.java  Dichotomy.java  Fibonacci.java  GoldenSection.java  Optimizer.java  Parabolas.java  Task.java
Lab1-2/src/main/java/secondLab/: AbstractSolver.java  ConjugateGradient.java  GradientDescent.java  Pair.java  QuadrFunction.java  QuadraticFunction.java  VectorHelper.java
Lab1-2/src/test/java/firstLab/: BaseTest.java  BrentTest.java  GoldenSectionTest.java  ParabolasTest.java
Lab3/: CMakeLists.txt  CMakeLists.txt.in  main.cpp
Lab3/Logger/: CMakeLists.txt  CMakeLists.txt.in  logger.cpp  logger.h
Lab3/Matrix/: matrix.h  profile_matrix.cpp  profile_matrix.h  regular_matrix.h  sparse_matrix.cpp  sparse_matrix.h
Lab3/Solver/: Conjugate_solver.cpp  Gauss_solver.cpp  LU_solver.cpp  solver.h
Lab3/TestGenerator/: generator.cpp  matrix_generator.h  profile_matrix_generator.cpp  regular_matrix_generator.cpp  sparse_matrix_generator.cpp
Lab3/TestRunner/: profile_runner.cpp  regular_runner.cpp  runner.cpp  runner.h  sparse_runner.cpp
Lab3/Utils/: file_utils.cpp  file_utils.h  print_utils.cpp  print_utils.h
Lab4/: CMakeLists.txt  CMakeLists.txt.in  Source.cpp  Source.h  main.cpp
Lab4/Methods/: BroadenFletcherChen.cpp  BroadenFletcherChen.h  GoldenSection.cpp  GoldenSection.h  Newton.cpp  Newton.h  NewtonDirectionDescent.cpp  NewtonDirectionDescent.h  NewtonOneDimension.cpp  NewtonOneDimension.h  Powell.cpp  Powell.h  QuasiNewton.cpp  QuasiNewton.h  method.cpp  method.h
Lab4/Utils/: extended_function.h  point.h  utils.cpp  utils.h
Report/: Книга1.xlsx
src/main/java/: Main.java  RunSixthExpression.java  Runner.java  Task.java
src/main/java/firstLab/: Brent.java  Dichotomy.java  DichotomyOptimizer.java  Fibonacci.java  GoldenSection.java  Logger.java  Main.java  Optimizer.java  Parabolas.java  Runner.java
src/main/java/lab1/: DichotomyOptimizer.java  Optimizer.java
src/main/java/logs/: Logger.java
src/main/java/secondLab/: AbstractSolver.java  ConjugateGradient.java  DiagonalQuadraticFunction.java  GradientDescent.java  Main.java  Matrix.java  MatrixHelper.java  Pair.java  QuadrFunction.java  QuadraticFunction.java  SteepestDescent.java  TestRunner.java  Vector.java  VectorHelper.java
src/test/firstlab/: TestOptimizer.java
src/test/java/firstLab/: BaseTest.java  DichotomyTest.java  FibonacciTest.java  GoldenSectionTest.java  TestOptimizer.java
